--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -7,54 +7,98 @@
 }
 
 #title{
-    text-align: center;
-    font-size: 2em;
+    
     font-weight: bold;
     color: #fff;
-    background: #000;
-    padding: 0.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
 }
 
 header{
-    background-color: #13a2c9;
+    background-color: #000000;
     height: 50px;
     width: 100%;
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
     z-index: 1;
-    display: inline;
+    display: flex;
     padding: 0 20px;
     box-shadow: 0px 0px 5px #000;
-    text-align: center;
-
 }
 
-header h1{
-    display: inline;
+#about{
+    background-color: #1a2224;
+    height: 50px;
+    width: 100%;
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
 }
 
 
-
-
+a:hover{
+    background-color: #000;
+    
+}
 
 
 .ulist{
     list-style: none;
-    display: inline;
-    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 nav{
-    text-align: center;
-    position: relative;
-    padding: 1%;
-    margin-top: 50px;
+    padding: 0.5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* padding-bottom: 50px; */
+    background-color: #30363d;
 }
+
+.navlink{
+    background-color: #238636;
+   
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0 50px;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    /* height: 100px; */
+    transition: 0.3s;
+    cursor: pointer;
+    
+
+}
+
+
 nav ul li{
-    display: inline;
-    padding: 0 10%;
+    margin:auto;
 }
 nav ul li a{
     text-decoration: none;
+    color:#f0f6fc;
+    margin:auto;
+    display: block;
+    /* padding-left: 100px;
+    padding-right: 100px; */
+    width:100%;
+    height: 100%;
 }
