--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+html{
+    background-color: #30363d;
+    height: fit-content;
+}
 
 #title{
     
@@ -45,8 +49,9 @@ header{
 
 
 a:hover{
-    background-color: #000;
-    
+    background-color: #237533;
+    border-radius: 5px;
+
 }
 
 
@@ -70,7 +75,7 @@ nav{
 .navlink{
     background-color: #238636;
    
-    padding: 10px;
+    /* padding: 10px; */
     border-radius: 5px;
     margin: 0 50px;
     font-size: 1.2em;
@@ -91,7 +96,9 @@ nav{
 
 nav ul li{
     margin:auto;
+    padding:0 0 0 0;
 }
+
 nav ul li a{
     text-decoration: none;
     color:#f0f6fc;
@@ -101,4 +108,71 @@ nav ul li a{
     padding-right: 100px; */
     width:100%;
     height: 100%;
+}
+
+#PortfolioProjects{
+    background-color: #1a2224;
+    height: 100%;
+    width: 100%;
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
+}
+
+#project{
+    background-color: #1a2224;
+    height: 100%;
+    width: 100%;
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
+    padding-left: 40px;
+    padding-bottom: 55%;
+    padding-top: 10px;
+}
+
+#container-left{
+    background-color: #1a2224;
+    height: 100%;
+    width: 100%;
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
+    padding-left: 40px;
+    padding-bottom: 55%;
+    padding-top: 10px;
+}
+
+#container-right{
+    background-color: #1a2224;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 50%;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
+    padding-left: 40px;
+    padding-bottom: 55%;
+    padding-top: 10px;
 }
