--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -10,6 +10,7 @@ html{
     height: fit-content;
 }
 
+
 #title{
     
     font-weight: bold;
@@ -125,7 +126,7 @@ nav ul li a{
 }
 
 #project{
-    background-color: #1a2224;
+    background-color: #30363d;
     height: 100%;
     width: 100%;
     /* position: fixed; */
@@ -138,13 +139,78 @@ nav ul li a{
     box-shadow: 0px 0px 5px #000;
     color:white;
     padding-left: 40px;
-    padding-bottom: 55%;
+    /* padding-bottom: 1%; */
     padding-top: 10px;
 }
 
 #container-left{
     background-color: #1a2224;
-    height: 100%;
+    width: 100%;
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
+    padding-left: 40px;
+    padding-bottom: 0%;
+    padding-top: 10px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+#container-right{
+    background-color: #1a2224;
+    width: 100%;
+    top: 0;
+    left: 50%;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
+    padding-left: 40px;
+    padding-bottom: 0%;
+    padding-top: 10px;
+    margin: 10px;
+}
+
+.buttons{
+    background-color: #238636;
+    color: white;
+    /* padding: 10px; */
+    border-radius: 5px;
+    margin: 0 50px;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    /* height: 100px; */
+    /* transition: 0.3s; */
+    cursor: pointer;
+    box-shadow: none;
+    text-shadow: none;
+    outline: none;
+    outline-style: none;
+    outline-color: none;
+    border-color: none;
+    box-shadow: none;
+}
+#button1{
+    border-color: none;
+}
+
+#container-left div{
+    background-color: #1a2224;
     width: 100%;
     /* position: fixed; */
     top: 0;
@@ -158,14 +224,22 @@ nav ul li a{
     padding-left: 40px;
     padding-bottom: 55%;
     padding-top: 10px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+
 }
 
-#container-right{
+#container-right div{
     background-color: #1a2224;
-    height: 100%;
     width: 100%;
+    /* position: fixed; */
+    /* div follows scroll bar */
+
+    
+
     top: 0;
-    left: 50%;
+    left: 0;
     z-index: 1;
     display: flex;
     flex-direction: column;
@@ -173,6 +247,11 @@ nav ul li a{
     box-shadow: 0px 0px 5px #000;
     color:white;
     padding-left: 40px;
-    padding-bottom: 55%;
+    padding-bottom: 1%;
     padding-top: 10px;
+    position:sticky;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+
 }
