--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -55,6 +55,11 @@ a:hover{
 
 }
 
+button:hover{
+    background-color: #237533;
+    border-radius: 5px;
+}
+
 
 .ulist{
     list-style: none;
@@ -222,7 +227,7 @@ nav ul li a{
     box-shadow: 0px 0px 5px #000;
     color:white;
     padding-left: 40px;
-    padding-bottom: 55%;
+    padding-bottom: 15%;
     padding-top: 10px;
     margin: 10px;
     justify-content: center;
@@ -233,11 +238,6 @@ nav ul li a{
 #container-right div{
     background-color: #1a2224;
     width: 100%;
-    /* position: fixed; */
-    /* div follows scroll bar */
-
-    
-
     top: 0;
     left: 0;
     z-index: 1;
@@ -249,9 +249,51 @@ nav ul li a{
     padding-left: 40px;
     padding-bottom: 1%;
     padding-top: 10px;
+    /* div follows scroll bar */
     position:sticky;
     margin: 10px;
     justify-content: center;
     align-items: center;
 
+}
+#container-right div img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.project-paragraph{
+    /* need !important to ovverride inherited style  */
+    /* Important needs to be used because all divs
+    in container-left need to have the same styles and 
+    it allows for easier implementation of future projects */
+    box-shadow: none !important;
+    padding-bottom: 0 !important;
+}
+
+.button-boxes{
+}
+
+footer{
+    background-color: #1a2224;
+    height: 100%;
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
+    padding-left: 40px;
+    padding-bottom: 0%;
+    padding-top: 10px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
 }
