--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -6,10 +6,13 @@
     font-family: sans-serif;
 }
 html{
-    background-color: #30363d;
+    background-color: #131518;
     height: fit-content;
 }
 
+body{
+    position: relative;
+}
 
 #title{
     
@@ -22,7 +25,7 @@ html{
 }
 
 header{
-    background-color: #000000;
+    background-color: #1a2224;
     height: 50px;
     width: 100%;
     /* position: fixed; */
@@ -75,7 +78,7 @@ nav{
     justify-content: center;
     align-items: center;
     /* padding-bottom: 50px; */
-    background-color: #30363d;
+    background-color: #131518;
 }
 
 .navlink{
@@ -131,7 +134,7 @@ nav ul li a{
 }
 
 #project{
-    background-color: #30363d;
+    background-color: #131518;
     height: 100%;
     width: 100%;
     /* position: fixed; */
@@ -263,6 +266,7 @@ nav ul li a{
     margin: 10px;
     justify-content: center;
     align-items: center;
+    top:20px;
 }
 
 
@@ -275,8 +279,8 @@ nav ul li a{
     padding-bottom: 0 !important;
 }
 
-.button-boxes{
-}
+/* .button-boxes{
+} */
 
 footer{
     background-color: #1a2224;
@@ -297,3 +301,46 @@ footer{
     justify-content: center;
     align-items: center;
 }
+
+#about-me{
+    width: none;
+}
+#about-me div{
+    background-color: #1a2224;
+    width: none;
+    /* position: fixed; */
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    box-shadow: 0px 0px 5px #000;
+    color:white;
+    padding-left: 40px;
+    padding-bottom: 1%;
+    padding-top: 10px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+}
+#about-me div h3{
+    font-size: 1.5em;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    /* transition: 0.3s; */
+    box-shadow: none;
+    text-shadow: none;
+    outline: none;
+    outline-style: none;
+    outline-color: none;
+    border-color: none;
+    box-shadow: none;
+}
+
