--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -131,6 +131,7 @@ nav ul li a{
     padding: 0 20px;
     box-shadow: 0px 0px 5px #000;
     color:white;
+    align-items: center;
 }
 
 #project{
@@ -269,6 +270,10 @@ nav ul li a{
     top:20px;
 }
 
+img:hover{
+    transform: scale(1.01);
+    transition: 0.3s;
+}
 
 .project-paragraph{
     /* need !important to ovverride inherited style  */
@@ -295,7 +300,7 @@ footer{
     box-shadow: 0px 0px 5px #000;
     color:white;
     padding-left: 40px;
-    padding-bottom: 0%;
+    padding-bottom: 10px;
     padding-top: 10px;
     margin: 10px;
     justify-content: center;
