--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -134,6 +134,10 @@ nav ul li a{
     align-items: center;
 }
 
+#portfolio-header{
+    padding-left: 30px;
+}
+
 #project{
     background-color: #131518;
     height: 100%;
@@ -170,12 +174,15 @@ nav ul li a{
     background-color: #1a2224;
     width: 100%;
     display: flex;
+    /* display column here is very important for the layout because without it
+    the first div in container-right would be stretched  */
     flex-direction: column;
     padding: 0 20px;
     box-shadow: 0px 0px 5px #000;
-    padding-left: 20px;
+    padding-left: 10px;
     padding-bottom: 20px;
     padding-top: 10px;
+    padding-right: 30px;
     margin: 10px;
 }
 
@@ -225,6 +232,7 @@ nav ul li a{
     box-shadow: 0px 0px 5px #000;
     color:white;
     padding-left: 20px;
+    padding-right: 20px;
     padding-bottom: 1%;
     padding-top: 10px;
     /* div follows scroll bar */
@@ -258,8 +266,7 @@ img:hover{
     padding-bottom: 0 !important;
 }
 
-/* .button-boxes{
-} */
+
 
 footer{
     background-color: #1a2224;
@@ -330,5 +337,7 @@ footer{
     .navlink{
         margin: 3px;;
     }
-
+    #project{
+        padding-left: 0;
+    }
 }
